# MegaBeetleArduino

./: README.md  phonyfile.txt
MainArduino/: README.md  calculations.cpp  calculations.h  candidat_1_stop_mechanism.ino  main.ino  test_main.ino
UltraSonicSensors/: README.md  ultra_sonic_the_hedge_hog.ino
lcd_screen/: CMakeLists.txt  README.md  cmake_install.cmake
lcd_screen/src/: CANBUS.md  lcd_screen.cpp
